Erratic viewport FPS at high frame rate #111579

Closed
opened 2023-08-27 07:00:00 +02:00 by Campbell Barton · 0 comments

When setting the frame to a high value 120+, the FPS value in the viewport becomes erratic and changes a lot, showing a higher values then the desired.

Steps to reproduce:

  • Disable VSync (in the case of Linux/X11 set the environment variable vblank_mode=0 for AMD, __GL_SYNC_TO_VBLANK=0 for NVidia).

  • Run blender with factory settings.

  • Set the FPS to 240.

  • Play the animation.

  • Notice the FPS value flickers, changing between 200..400.

  • Set the FPS to 120.

  • Notice the FPS value flickers, between 130..140.

This error can be obscured at lower frame-rates but was hidden by the FPS display rounding to integer.

When the FPS display is changed to always show decimal places, an empty scene set to use 23.98 FPS playback results in an actual FPS of 24.03.

  • Observed in 3.6.1 and current main, both Wayland & X11.
  • Observed in 2.62 on X11.
  • Works as expected for 2.49 on X11.

Notes:

  • As this is quite simple to redo, I'm surprised this hasn't been reported before (from searching online and on this site I couldn't find a report at least).
  • This works properly in 2.4x and looks to be a regression from 2.5x event system refactor.

Reporting for reference, investigating a fix.


A follow up on this change, at the time I thought this was more of a technical flaw - mainly noticeable when the displayed FPS text jiitered, however comparing the playback speed on an object rotating at a fixed speed, I can notice occasional glitch at 50-FPS on my system.

Attached comparisons for the FPS during playback on a simple file before/after the fix.

Note that the "after" case still has some jittering, !111603 is a proposed fix for that.

25 FPS.

30 FPS.

50 FPS.

60 FPS.

120 FPS.

When setting the frame to a high value 120+, the FPS value in the viewport becomes erratic and changes a lot, showing a higher values then the desired. Steps to reproduce: - Disable VSync (in the case of Linux/X11 set the environment variable `vblank_mode=0` for AMD, `__GL_SYNC_TO_VBLANK=0` for NVidia). - Run blender with factory settings. - Set the FPS to 240. - Play the animation. - Notice the FPS value flickers, changing between 200..400. - Set the FPS to 120. - Notice the FPS value flickers, between 130..140. This error can be obscured at lower frame-rates but was hidden by the FPS display rounding to integer. When the FPS display is changed to always show decimal places, an empty scene set to use 23.98 FPS playback results in an actual FPS of 24.03. - Observed in 3.6.1 and current `main`, both Wayland & X11. - Observed in 2.62 on X11. - Works as expected for 2.49 on X11. Notes: - As this is quite simple to redo, I'm surprised this hasn't been reported before (from searching online and on this site I couldn't find a report at least). - This works properly in 2.4x and looks to be a regression from 2.5x event system refactor. ---- Reporting for reference, investigating a fix. ---- A follow up on this change, at the time I thought this was more of a technical flaw - mainly noticeable when the displayed FPS text jiitered, however comparing the playback speed on an object rotating at a fixed speed, I can notice occasional glitch at 50-FPS on my system. Attached comparisons for the FPS during playback on a simple file before/after the fix. Note that the "after" case still has some jittering, !111603 is a proposed fix for that. 25 FPS. ![](https://projects.blender.org/attachments/133b0a7a-000b-4d87-9699-f8a782a24b1d) 30 FPS. ![](https://projects.blender.org/attachments/da7acf0a-46f1-40ab-b51a-f0a0de6f0e74) 50 FPS. ![](https://projects.blender.org/attachments/9fdb48df-e182-479c-97d1-a59446cbd3ea) 60 FPS. ![](https://projects.blender.org/attachments/d55e2a06-958a-41bb-9c38-46be017cc779) 120 FPS. ![](https://projects.blender.org/attachments/8800f4bd-c119-46b5-bfe2-64cac4ba55c0)
Campbell Barton added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-08-27 07:00:01 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Needs Triage
labels 2023-08-27 09:26:27 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#111579
No description provided.